Updated Project Section

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                             <span class="tag">REST API</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/AditiShah17" target="_blank" aria-label="GitHub" class="icon-link">
+                            <a href="https://github.com/AditiShah17/Housing-Management-" target="_blank" aria-label="GitHub" class="icon-link">
                                 <i class="fa-brands fa-github" aria-hidden="true"></i>
                                 <span class="sr-only">GitHub</span>
                             </a>    
@@ -270,7 +270,7 @@
                             <span class="tag">MongoDB</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/AditiShah17" target="_blank" aria-label="GitHub" class="icon-link">
+                            <a href="https://github.com/AditiShah17/sweat4fit" target="_blank" aria-label="GitHub" class="icon-link">
                                 <i class="fa-brands fa-github" aria-hidden="true"></i>
                                 <span class="sr-only">GitHub</span>
                             </a>
@@ -278,7 +278,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <!-- <div class="project-card">
                     <div class="project-image">🛒</div>
                     <div class="project-content">
                         <h3 class="project-title">E-Commerce Platform</h3>
@@ -296,7 +296,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
