Update Resume and Context in about-section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Building production web apps with a focus on speed, security and maintainability. Specializing in modern web technologies and AI-assisted development. I transform ideas into seamless digital experiences.</p>
                     <div class="hero-buttons">
                         <a href="https://calendly.com/aditishah0596/coffee-chat" class="btn btn-primary" target="_blank">Get in touch</a>
-                        <a class="btn btn secondary" href="files/Aditi Shah_Full Stack Developer.pdf" download><i class="fa-solid fa-file-arrow-down"></i> Download Resume</a>
+                        <a class="btn btn secondary" href="files/Aditi Shah-Full Stack Developer.pdf" download><i class="fa-solid fa-file-arrow-down"></i> Download Resume</a>
                     </div>
                      <div class="social-links">
                         <a href="https://github.com/AditiShah17" target="_blank" aria-label="GitHub" class="icon-link">
@@ -111,25 +111,25 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <p class="about-content">
-                 I build elegant, user-centered web experiences focused on performance, maintainability,
-                        and delightful UI. I turn ambiguous problems into clear, tested solutions and enjoy
-                        mentoring teams to deliver high-quality software.
+                I am a Full-Stack Developer with over 5 years of experience dedicated to delivering scalable, secure, and user-centric web applications across high-growth environments. 
+                My work focuses on end-to-end development, transforming ambiguous challenges into clear, high-impact solutions.
+                 
             </p>
             <div class="value-cards">
                 <div class="value-card">
-                    <div class="value-icon">💡</div>
-                    <h3>Clean Code</h3>
-                    <p>Writing maintainable, scalable code that stands the test of time.</p>
+                    <!-- <div class="value-icon">💡</div> -->
+                    <h3>Technical Depth and Ownership</h3>
+                    <p>My core expertise lies in the JavaScript ecosystem, specifically React for building modern, responsive single-page applications and Node.js/Express.js for developing powerful RESTful APIs and microservices</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🚀</div>
-                    <h3>Innovation</h3>
-                    <p>Always exploring new technologies and staying ahead of the curve.</p>
+                    <!-- <div class="value-icon">🚀</div> -->
+                    <h3>User Focus and Collaboration</h3>
+                    <p>I approach every task with a user-centric perspective, ensuring that implementations are focused on performance, maintainability, and accessibility</p>
                 </div>
                 <div class="value-card">
-                    <div class="value-icon">🤝</div>
-                    <h3>Collaboration</h3>
-                    <p>Building strong teams and fostering open communication.</p>
+                    <!-- <div class="value-icon">🤝</div> -->
+                    <h3>Continuous Learning and Problem Solving</h3>
+                    <p>I am a lifelong learner committed to staying current with emerging technologies and best practices.</p>
                 </div>
             </div>
         </div>
