break line under about-section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="value-card">
                     <!-- <div class="value-icon">🚀</div> -->
-                    <h3>User Focus and Collaboration</h3>
+                    <h3>User Focus and <br /> Collaboration</h3>
                     <p>I approach every task with a user-centric perspective, ensuring that implementations are focused on performance, maintainability, and accessibility</p>
                 </div>
                 <div class="value-card">
